# language-enforcer

./: .gitignore  Cargo.toml  PROMPT.md  README.md
.claude/: conventions.md
.github/workflows/: macos-release.yml
auth-server/: Cargo.toml  Dockerfile  fly.toml
auth-server/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
gui/: README.md
gui/frontend/: package-lock.json  package.json  vite.config.js
gui/frontend/src/: App.svelte  main.js  polyfills.js
gui/frontend/src/lib/: auth.js
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: app.json
gui/src-tauri/src/: lib.rs  main.rs
scripts/: export-seed.sh  migrate-cleanup-column.sh  vision_ocr.swift
tui/: Cargo.toml
tui/src/: main.rs
tui/src/db/: mod.rs  postgres.rs  sqlite.rs
