[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
dotenvy = "0.15"
