[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
chrono = "0.4"
crossterm = "0.27"
directories = "5"
dotenvy = "0.15"
le_core = { path = "../core" }
native-tls = "0.2"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5"
ratatui = "0.27"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = "1"
