[package]
name = "language_enforcer_gui"
version = "0.1.0"
edition = "2024"

[lib]
name = "language_enforcer_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["chrono", "uuid"] }
uuid = "1"
le_core = { path = "../../core" }
rand = "0.8"
native-tls = "0.2"
postgres = "0.19"
postgres-native-tls = "0.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
